@@ -271,6 +271,9 @@ Changes for APR 2.0.0
   *) apr_proc_create(): Fix incorrect error handling when pipes are redirected
      on Windows [Ivan Zhakov]
 
+  *) apr_proc_create(): Fix potential handle leak when apr_proc_create() is used
+     from from multiple threads on Windows [Ivan Zhakov]
+
 Changes for APR and APR-util 1.7.x and later:
 
   *) http://svn.apache.org/viewvc/apr/apr/branches/1.7.x/CHANGES?view=markup
